# tvplotlines

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  experiment-log.md  house_s01.json  program.md  pyproject.toml  results.tsv  visualizations.py
.github/workflows/: test.yml
docs/: api.md  formulas.md  index.md  quickstart.md
docs/experiments/: counting-events-for-ABC-rank.md  madmen-s01-event-checklist.md
examples/: run_pipeline.py
examples/results/: bb_s01.json  got_s01.json
examples/synopses/: BB_S01E01.txt  BB_S01E02.txt  BB_S01E04.txt  BB_S01E06.txt  GOT_S01E08.txt
experiments/: ablation_pass0.py
experiments/ablation-functions/: bb_no_functions_metrics.json  bb_no_functions_result.json  got_no_functions_metrics.json  got_no_functions_result.json
experiments/ablation-story-dna/: bb_no_story_dna_metrics.json  bb_no_story_dna_result.json  got_no_story_dna_metrics.json  got_no_story_dna_result.json
experiments/least-to-most/: bb_2pass_metrics.json  bb_2pass_result.json  got_2pass_metrics.json  got_2pass_result.json  got_3pass_metrics.json  got_3pass_result.json  run_got.py
experiments/results/: ablation_pass0.csv
experiments/synopsis-robustness/: bb_imdb_result.json  bb_ours_result.json  bb_srt_result.json  bb_synopsis_plus_srt_result.json  bb_wiki_result.json  imdb_synopses.json  robustness_results.json  wiki_long_synopses.json  wiki_short_synopses.json
experiments/vanilla-vs-pipeline/: bb_vanilla.json  comparison_results.json  eval_got.json  eval_madmen.json  got_vanilla.json  madmen_vanilla.json  run_eval.py  vanilla_prompt.md
house-s01/: S01E01.txt  S01E02.txt  S01E03.txt  S01E04.txt  S01E05.txt  S01E06.txt  S01E07.txt  S01E08.txt  S01E09.txt  S01E10.txt  S01E11.txt  S01E12.txt  S01E13.txt  S01E14.txt  S01E15.txt  S01E16.txt  S01E17.txt  S01E18.txt  S01E19.txt  S01E20.txt  S01E21.txt  S01E22.txt  suggested_plotlines.json
md/: architecture.md  inventory.md  mas4bw-library-audit.md  open-source-strategy.md  prompt-experiment-ideas.md  storyline-extraction-reference.md
md/decisions/: 001-context-before-extraction.md  002-no-internal-state.md  003-abc-classification.md  004-no-language-parameter.md  005-pass3-narratologist-review.md
references/: books2series-onepage.md  structure_sketch.yaml  Что делает Discourse для сериала.md
references/plotlines-design/: 01_extract_quotes.md  2026-03-09-plotlines-knowledge-base-design.md  book-outlines.md  taxonomy-approach.md
references/plotlines-quotes/: douglas_writing_tv_drama.json  landau_tv_showrunners.json  nash_savethecat_tv.json  pena_developing_series.json  venis_inside_the_room.json
scripts/: arc_fn_experiment.py  rank_experiment.py  synopses_experiment.py
src/plotter/: __init__.py  __main__.py  callbacks.py  cli.py  llm.py  metrics.py  models.py  pass0.py  pass1.py  pass1_merged.py  pass2.py  pass3.py  pipeline.py  postprocess.py  verdicts.py
src/tvplotlines/: __init__.py  __main__.py  callbacks.py  cli.py  input.py  llm.py  metrics.py  models.py  pass0.py  pass1.py  pass1_merged.py  pass2.py  pass3.py  pass4.py  pipeline.py  postprocess.py  synopses_writer.py  verdicts.py  write_synopses.py
tests/: integration_resilience.py  test_consistency.py  test_input.py  test_llm.py  test_metrics.py  test_models.py  test_pass1_prior.py  test_pass3_snapshot.py  test_pipeline_prior.py  test_postprocess.py  test_resilience.py  test_slovo_patsana.py  test_synopses_writer.py  test_validation.py  test_verdicts.py  test_write_synopses.py
tests/fixtures/: GDR_S01E01.txt  GDR_S01E02.txt  GDR_S01E03.txt  GDR_S01E04.txt  GDR_S01E05.txt  GDR_S01E06.txt  GDR_S01E07.txt  GDR_S01E08.txt  GDR_S01E09.txt  GDR_S01E10.txt  GDR_S01E11.txt  GDR_S01E12.txt  GDR_S01E13.txt  GDR_S01E14.txt  GDR_S01_breakdown.md  SP_S01E01.txt  SP_S01E02.txt  SP_S01E03.txt  SP_S01E04.txt  SP_S01E05.txt  SP_S01E06.txt  SP_S01E07.txt  SP_S01E08.txt  SP_S01_breakdown.md  TD_S01E01.txt  TD_S01E02.txt  TD_S01E03.txt  (+11 more)
(+95 files in other folders)
