[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotter"
version = "0.1.0"
description = "Extract storylines from TV series synopses using LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
plotter = "plotter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plotter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
