[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotter"
version = "0.1.0"
description = "Extract storylines from TV series synopses using LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "BirdInTheTree"}]
keywords = [
    "storyline",
    "narrative",
    "tv-series",
    "plot-extraction",
    "llm",
    "narrative-analysis",
    "synopsis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "scikit-learn>=1.4",
]

[project.urls]
Repository = "https://github.com/BirdInTheTree/plotter"
Documentation = "https://github.com/BirdInTheTree/plotter/tree/main/docs"

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
]

[project.scripts]
plotter = "plotter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plotter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
